--- a/telnyx_rtc/build.gradle
+++ b/telnyx_rtc/build.gradle
@@ -6,37 +6,17 @@ plugins {
     id 'org.jetbrains.dokka'
     id 'maven-publish'
     id 'kotlin-android-extensions'
-    id 'jacoco'
 }
 
 apply plugin: 'maven-publish'
 apply plugin: "com.bugsnag.android.gradle"
 
 
-task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
-
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
-
-    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
-    def kotlinDebugTree = fileTree(dir: "${buildDir}/tmp/kotlin-classes/debug", excludes: fileFilter)
-    def mainSrc = "${project.projectDir}/src/main/java"
-
-    sourceDirectories.setFrom(files([mainSrc]))
-    classDirectories.setFrom(files([kotlinDebugTree]))
-    executionData.setFrom(fileTree(dir: "$buildDir", includes: [
-            "jacoco/testDebugUnitTest.exec",
-            "outputs/code-coverage/debugAndroidTest/connected/*coverage.ec"
-    ]))
-}
-
 def getVersionName = { ->
     return "0.0.25"
 }
 
-def getArtifactId = { ->
+def getArtificatId = { ->
     return "telnyx_rtc"
 }
 
@@ -49,9 +29,9 @@ publishing {
     publications {
         bar(MavenPublication) {
             groupId 'com.telnyx.webrtc.sdk.telnyx_rtc'
-            artifactId getArtifactId()
+            artifactId getArtificatId()
             version getVersionName()
-            artifact("$buildDir/outputs/aar/${getArtifactId()}-release.aar")
+            artifact("$buildDir/outputs/aar/${getArtificatId()}-release.aar")
             artifact(sourceJar)
             pom.withXml {
                 final dependenciesNode = asNode().appendNode('dependencies')
@@ -125,7 +105,6 @@ android {
             jniDebuggable true
         }
         debug {
-            testCoverageEnabled true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             debuggable true
@@ -140,13 +119,6 @@ android {
         jvmTarget = '1.8'
     }
     testOptions {
-        unitTests.all {
-            jacoco {
-                includeNoLocationClasses = true
-                jacoco.excludes = ['jdk.internal.*']
-            }
-        }
-        unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
     sourceSets {
@@ -243,20 +215,20 @@ dependencies {
 
     // Testing - Instrumentation
     androidTestImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    testImplementation 'androidx.test:rules:1.4.0'
-    androidTestImplementation 'androidx.test.ext:truth:1.4.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.work:work-testing:2.6.0-rc01'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:truth:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.work:work-testing:2.5.0'
     androidTestImplementation "io.mockk:mockk-android:1.10.4"
-    debugImplementation 'androidx.fragment:fragment-testing:1.3.6'
-    debugImplementation 'androidx.test:core-ktx:1.4.0'
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.2'
+    debugImplementation 'androidx.test:core-ktx:1.3.0'
 
     testImplementation "org.mockito:mockito-inline:3.8.0"
     androidTestImplementation "org.mockito:mockito-android:3.8.0"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
